MB-11136: check for NULL vbucket in getItemsRemaining

When retrieving the number of items remaining to be sent in
the stream, the vbucket should be checked for NULL.

Change-Id: I321d08f222cdc1797c81131a8f4f3cd84abfe5c2
Reviewed-on: http://review.couchbase.org/37211
Reviewed-by: Sundararaman Sridharan <sundar@couchbase.com>
Tested-by: Sundararaman Sridharan <sundar@couchbase.com>